[ feat ] -- 新增吻仔魚圖片

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -845,6 +845,17 @@ $border: 4px solid $primary-dark;
         padding: 32px 24px 88px;
         width: 100%;
       }
+      .circle{
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 4px solid white;
+        @media (max-width:576px) {
+          width: 288px;
+          height: 288px;
+        }
+      }
       &__content {
         color: white;
         opacity: 0.8;
